Issue 3521 - change back to old method ( Long )
git-svn-id: https://svn.imcode.com/imcode/imcms/trunk@4541 bd66a97b-2aff-0310-9095-89ca5cabf5a6